# acews

./: README.md  meson.build
docs/: Doxyfile  Makefile  make.bat  requirements.txt
docs/sphinx/: conf.py  index.rst
docs/sphinx/apis/: ews.rst  index.rst
include/: ews.h  ews_config.h
src/: client.h  ews_port.h  ews_port_freertos.h  ews_port_linux.h  http.c  http.h  listener.c  listener.h  log.h  macros.h  meson.build  route.c  route.h  server.c  server.h  socket.c  socket.h  utils.c  utils.h  worker.c  worker.h
tools/: bin2c.py  build-docs.sh
